        be registered without systematically creating a new 
        EngineClassLoader. The classLoader and userClassLoader 
        properties are no longer static. A createClassLoader() method
        was added as well as a static getResource(String) : URL one. 
        Reported by Bruno Harbulot.
      - Deprecated WedlResource. Use WadlServerResource instead.        
    - Bugs fixed
      - Fixed character encoding issues (XStream, Jackson, JAXB, etc.)
      - Adjusted Jackson configuration as it was automatically closing 
        the target stream/writer, not respecting the 
        Representation#write() contract.
      - XStream detection of annotations was only working for JSON, not
        for XML representations. Reported by George Calm.
      - Conversion of empty entities to Form instances.
        Reported by Jean-Baptiste Dusseaut.
      - Fixed implementation of JaasVerifier to provide the User and 
        Roles principals to the JAAS Subject before login and to retrieve
        the User if no one exist and a principal user classname is 
        provided. Contributed by Bruno Harbulot.
      - Fixed bug preventing MessageBodyReader/Writer implementors 
        from being recognized as providers. 
        Contributed by Martin Krasser.
      - Fixed constructor DigestAuthenticator(Context,String,String)
        to properly take into account the "serverKey" parameter.
        Reported by Yang Xudong.
      - Fixed support of inherited annotated methods by ServerResource. 
        Reported by Kevin Pauli.
      - Fixed potential NPE in HttpBasicHelper.
        Reported by Myriam Leggieri        
      - Fixed potential NPE in SpringBeanFinder#getContext() and
        added missing setSpringBeanRouter(SpringBeanRouter) method.
        Reported by Thierry Templier.
    - Misc
      - Server connectors now display the port they are listening on
        in their start message.  
      - Optimized by a factor 10, the speed of the getStream() method