@@ -22,6 +22,8 @@ Changes log
         was added as well as a static getResource(String) : URL one. 
         Reported by Bruno Harbulot.
       - Deprecated WedlResource. Use WadlServerResource instead.        
+      - Added get/setRouter methods and deprecated getSpringBeanRouter
+        in the SpringBeanFinder class. Reported by Thierry Templier.
     - Bugs fixed
       - Fixed character encoding issues (XStream, Jackson, JAXB, etc.)
       - Adjusted Jackson configuration as it was automatically closing 
@@ -46,7 +48,6 @@ Changes log
       - Fixed potential NPE in HttpBasicHelper.
         Reported by Myriam Leggieri        
       - Fixed potential NPE in SpringBeanFinder#getContext() and
-        added missing setSpringBeanRouter(SpringBeanRouter) method.
         Reported by Thierry Templier.
     - Misc
       - Server connectors now display the port they are listening on
